Header alignment correction.

--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ h1 {
     color: rgb(87, 87, 87);
     font-weight: 300;
     font-size: 40px;
+    text-align: left;
 }
 
 h2 {
@@ -39,6 +40,7 @@ h2 {
     font-weight: 400;
     font-size: 40px;
     margin: 0px 0px 10px 0px;
+    text-align: left;
 }
 
 h3 {
@@ -46,6 +48,7 @@ h3 {
     font-weight: 300;
     font-size: 30px;
     display: inline;
+    text-align: left;
 }
 
 h4 {
@@ -53,6 +56,7 @@ h4 {
     font-weight: 300;
     font-size: 20px;
     display: inline;
+    text-align: left;
 }
 
 hr {
